# bluetree

./: .gitignore  README.md  patch.txt
eclient/: CMakeLists.txt
eclient/code/: eclient.h  main.cpp  tableview_test_data.cpp  tableview_test_data.h
egui/: CMakeLists.txt  egui.h  eguilib.h
egui/code/component/: ecomponent.cpp  ecomponent.h
egui/code/components/: eattrbuffer.cpp  eattrbuffer.h  eautolabel.cpp  eautolabel.h  ecomponent.cpp  ecomponent.h  eeditbuffer.h  esstrbuffer.cpp  estrbuffer.h
egui/code/defs/: eguiclassid.h  eguioid.h
egui/code/eimgui_iface/: eimgui_iface.h
egui/code/gui/: edesktop.cpp  egui.cpp  egui.h  egui_open.cpp  egui_persistent_style.cpp  egui_persistent_style.h  eguiroot.cpp  eguiroot.h  eguix.h
egui/code/helpers/: eattrbuffer.cpp  eattrbuffer.h  eautolabel.cpp  eautolabel.h  edrawhelpers.cpp  edrawhelpers.h  eeditbuffer.cpp  eeditbuffer.h  enicevalue.cpp  enicevalue.h  esstrbuffer.cpp  estrbuffer.h
egui/code/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_internal.h.orig  imgui_internal.h.rej  imgui_widgets.cpp  imgui_widgets.cpp.orig  imgui_widgets.cpp.rej
egui/code/imgui_iface/: eimgui_iface.h  imgui_iface.h  readme.txt
egui/code/initialize/: eguiclasslist.cpp  eguiclasslist.h  eguiglobal.h  eguiinitialize.cpp
egui/code/ioc_components/: eioc_checkbox.cpp  eioc_checkbox.h
egui/code/setup/: edesktop.cpp  eguisetup.cpp
egui/code/userinput/: ekeyboard.h  emouse.h
egui/doc/2020/: 201031-python-webview-etc-sofie-html-within-app.txt  201107-patch-imgui-tables-to-have-more-than-64-columns.txt
egui/extensions/3d/: emovingobject3d.cpp  emovingobject3d.h  eobject3d.cpp  eobject3d.h  eworld3d.cpp  eworld3d.h
egui/extensions3d/3d/: emesh3d.cpp  emesh3d.h  emovingobject3d.cpp  emovingobject3d.h  eobject3d.cpp  eobject3d.h  eobject3d_import.cpp  eterrain3d.cpp  eterrain3d.h  eworld3d.cpp  eworld3d.h
egui/glfw_opengl3/eimgui_iface/: eimgui_iface_glfw_opengl3.cpp  eimgui_texture_opengl3.cpp
egui/glfw_opengl3/graphics_api/: api_glfw_opengl3.cpp
egui/glfw_opengl3/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
egui/glfw_opengl3/imgui_iface/: imgui_iface_glfw_opengl3.cpp
egui/osbuild/vs/: egui.sln  egui.vcxproj
egui/osbuild/vs2019/: egui.vcxproj
eobjects/: CMakeLists.txt  eobjects.h  eobjectsx.h
eobjects/code/binding/: eacknowledge.cpp  eacknowledge.h  ebinding.cpp  ebinding.h  epropertybinding.cpp  epropertybinding.h  erowsetbinding.cpp  erowsetbinding.h  etablebinding.cpp  etablebinding.h
eobjects/code/bitmap/: ebitmap.cpp  ebitmap.h
eobjects/code/buffer/: ebuffer.cpp  ebuffer.h
eobjects/code/connection/: econnection.cpp  econnection.h  eendpoint.cpp  eendpoint.h
eobjects/code/container/: econtainer.cpp  econtainer.h  epersistent.cpp  epersistent.h
eobjects/code/defs/: eclassid.h  ecommands.h  edefs.h  emacros.h  eoid.h  estatus.h  etypes.cpp  etypes.h
eobjects/code/envelope/: eenvelope.cpp  eenvelope.h
eobjects/code/fsys/: edirectory.cpp  edirectory.h  efilesystem.cpp  efilesystem.h
eobjects/code/global/: eclasslist.cpp  eclasslist.h  eglobal.cpp  eglobal.h  einitialize.cpp  elogindata.cpp  elogindata.h  eprocess.cpp  eprocess.h
eobjects/code/helpers/: eenum_types_str.cpp  eenum_types_str.h  eliststr_helpers.cpp  eliststr_helpers.h  eobjflags_helpers.cpp  eobjflags_helpers.h  etypeenum_helpers.cpp  etypeenum_helpers.h
eobjects/code/initialize/: eclasslist.cpp  eobjects.cpp
eobjects/code/main/: emain.h
eobjects/code/matrix/: ematrix.cpp  ematrix.h  ematrix_as_table.cpp
eobjects/code/name/: ename.cpp  ename.h  enamespace.cpp  enamespace.h
eobjects/code/object/: eclasslist.cpp  eclasslist.h  ehandle.cpp  ehandle.h  ehandleroot.cpp  ehandleroot.h  ehandletable.cpp  ehandletable.h  ejsonserialization.cpp  eobject.cpp  eobject.h  eobject_bindings.cpp  eobject_callback.cpp  eobject_json.cpp  eobject_messages.cpp  eobject_namespace.cpp  eobject_properties.cpp  eobject_save_load.cpp  eobject_serialize.cpp
eobjects/code/osstream/: eosstream.cpp  eosstream.h
eobjects/code/pointer/: epointer.cpp  epointer.h
eobjects/code/root/: eroot.cpp  eroot.h
eobjects/code/set/: eset.cpp  eset.h
eobjects/code/stream/: ebuffer.cpp  ebuffer.h  ebufferedstream.cpp  ebufferedstream.h  econsole.cpp  efile.cpp  eosstream.cpp  eosstream.h  equeue.cpp  equeue.h  estream.cpp  estream.h
eobjects/code/string/: eint2str.cpp  eint2str.h
eobjects/code/syncmsg/: esyncconnector.cpp  esyncconnector.h  esynchronized.cpp  esynchronized.h
eobjects/code/table/: edbm.cpp  edbm.h  erange.cpp  erange.h  erowset.cpp  erowset.h  etable.cpp  etable.h  etablehelpers.cpp  etablehelpers.h  etablemessages.cpp  etablemessages.h  ewhere.cpp  ewhere.h
eobjects/code/thread/: ethread.cpp  ethread.h  ethreadhandle.cpp  ethreadhandle.h
eobjects/code/time/: etime.cpp  etime.h  etime_linux.cpp  etime_windows.cpp  etimestr.cpp
eobjects/code/timer/: etimer.cpp  etimer.h
eobjects/code/valuex/: evaluex.cpp  evaluex.h
eobjects/code/variable/: evariable.cpp  evariable.h
eobjects/examples/eswitch/: CMakeLists.txt
eobjects/examples/unittests/: CMakeLists.txt
eobjects/extensions/eiocom/: eio_protocol.cpp  eio_protocol.h  eio_root.cpp  eio_root.h  eiocom.cpp  eiocom.h  eprotocol_handle_iocom.cpp  eprotocol_handle_iocom.h  eprotocol_iocom.cpp  eprotocol_iocom.h
eobjects/extensions/eswitchbox/: eprotocol_handle_switchbox.cpp  eprotocol_handle_switchbox.h  eprotocol_switchbox.cpp  eprotocol_switchbox.h  eswitchbox.h
eobjects/extensions/io/: eio.h  eio_assembly.cpp  eio_assembly.h  eio_brickbuf.cpp  eio_brickbuf.h  eio_defs.cpp  eio_defs.h  eio_device.cpp  eio_device.h  eio_group.cpp  eio_group.h  eio_info.cpp  eio_mblk.cpp  eio_mblk.h  eio_network.cpp  eio_network.h  eio_root.cpp  eio_root.h  eio_signal.cpp  eio_signal.h  eio_signalassembly.cpp  eio_signalassembly.h  eio_thread.cpp  eio_thread.h  eio_variable.cpp  eio_variable.h
glass/: CMakeLists.txt  imgui.ini  readme.txt
glass/code/: glass.h  main.cpp  tableview_test_data.cpp  tableview_test_data.h
(+186 files in other folders)
